# rust-playground

./: Cargo.toml  README.md
binary/: Cargo.toml
binary/src/: main.rs
lib/: Cargo.toml
lib/src/: lib.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
simple-web-server/: Cargo.toml
simple-web-server/src/: lib.rs  main.rs  thread_pool.rs
