[package]
name = "minigrep"
version = "0.1.0"
authors = ["kalindimitrovv <kalindimitrovv@gmail.com>"]
edition = "2018"

[lib]
name = "libminigrep"
path = "src/lib.rs"

[[bin]]
name = "minigrep"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
